region: Factor out adding source widgets code

https://bugzilla.gnome.org/show_bug.cgi?id=695049